--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0057.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0057.html
@@ -1261,9 +1261,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 2399 1850 2469">
-        <span id="w_243" class="ocr_word" title="bbox 101 2418 131 2450">
+        <span id="w_243_0" class="ocr_word" title="bbox 101 2418 131 2450">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_243_1" class="ocr_word" title="bbox 101 2418 131 2450">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 156 2399 337 2467" lang="grc">
@@ -1309,11 +1314,6 @@
         <span id="w_252" class="ocr_word" title="bbox 1597 2399 1726 2467" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνὴρ</ins>
-          </span>
-        </span>
-        <span id="w_253" class="ocr_word" title="bbox 1766 2402 1850 2451" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπί</ins>
           </span>
         </span>
       </span>
