--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0063.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0063.html
@@ -32,9 +32,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 127 300 1822 370">
-        <span id="w_4" class="ocr_word" title="bbox 127 323 250 370" lang="grc">
+        <span id="w_4_0" class="ocr_word" title="bbox 127 323 250 370">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">„τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_4_1" class="ocr_word" title="bbox 127 323 250 370">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 290 302 590 352" lang="grc">
@@ -75,11 +80,6 @@
         <span id="w_12" class="ocr_word" title="bbox 1657 300 1727 365" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἷς</ins>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 1766 304 1822 355" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέ</ins>
           </span>
         </span>
       </span>
@@ -203,14 +203,14 @@
             <ins class="alt" title="nlp 1.00">πολέμους</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1232 530 1536 600" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1232 530 1536 600">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀικηφόρος,</ins>
+            <ins class="alt" title="nlp 2.00">ἀκάθεκτος,</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 1582 535 1820 603" lang="grc">
+        <span id="w_37_1" class="ocr_word" title="bbox 1232 530 1536 600">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προθέων</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -230,9 +230,14 @@
             <ins title="nlp 2.00">Κομνηνοῦ</ins>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 678 611 995 677" lang="grc">
+        <span id="w_42_0" class="ocr_word" title="bbox 678 611 995 677">
           <span class="alternatives">
-            <ins title="nlp 2.00">Παρατάξεως</ins>
+            <ins class="alt" title="nlp 2.00">παρατάξεως</ins>
+          </span>
+        </span>
+        <span id="w_42_1" class="ocr_word" title="bbox 678 611 995 677">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_43" class="ocr_word" title="bbox 1021 626 1186 662" lang="grc">
@@ -263,11 +268,6 @@
         <span id="w_48" class="ocr_word" title="bbox 1764 614 1819 663" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_49" class="ocr_word" title="bbox 1863 627 1884 659">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
           </span>
         </span>
       </span>
@@ -796,9 +796,14 @@
             <ins class="alt" title="nlp 2.00">ἀλλ'</ins>
           </span>
         </span>
-        <span id="w_154_1" class="ocr_word" title="bbox 371 1624 459 1669">
+        <span id="w_154_1_0" class="ocr_word" title="bbox 371 1624 459 1669">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οὐδ'</ins>
+            <ins class="alt" title="nlp 2.00">οὐδ᾿</ins>
+          </span>
+        </span>
+        <span id="w_154_1_1" class="ocr_word" title="bbox 371 1624 459 1669">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 674 1641 742 1680" lang="grc">
@@ -829,11 +834,6 @@
         <span id="w_160" class="ocr_word" title="bbox 1391 1618 1501 1670" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐδ’</ins>
-          </span>
-        </span>
-        <span id="w_161" class="ocr_word" title="bbox 1542 1619 1824 1671" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀπεδύσατο</ins>
           </span>
         </span>
       </span>
@@ -1038,7 +1038,7 @@
         </span>
         <span id="w_201" class="ocr_word" title="bbox 722 2005 874 2075" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνὴρ</ins>
+            <ins title="nlp 2.00">(ἀνὴρ</ins>
           </span>
         </span>
         <span id="w_202" class="ocr_word" title="bbox 901 2009 955 2058" lang="grc">
