--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0077.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0077.html
@@ -223,9 +223,9 @@
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1703 525 1789 576" lang="grc">
+        <span id="w_41_0" class="ocr_word" title="bbox 1703 525 1789 576">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλλήλους</ins>
+            <ins class="alt" title="nlp 2.00">ἀλ-</ins>
           </span>
         </span>
       </span>
@@ -235,9 +235,14 @@
             <ins title="nlp 2.00">D</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 310 625 355 655" lang="grc">
+        <span id="w_44_0" class="ocr_word" title="bbox 310 625 355 655">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins class="alt" title="nlp 2.00">λήλους</ins>
+          </span>
+        </span>
+        <span id="w_44_1" class="ocr_word" title="bbox 310 625 355 655">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οἱ</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 391 604 631 671" lang="grc">
@@ -356,7 +361,7 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1321 761 1458 817" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲ</ins>
+            <ins title="nlp 2.00">(οὐδὲ</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1496 780 1588 826" lang="grc">
