--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0058.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0058.html
@@ -15,12 +15,6 @@
             <ins class="alt" title="nlp 1.00">28</ins>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 545 181 561 191">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_2" class="ocr_word" title="bbox 722 193 934 237">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.96">ΑΝΝΑΕ</ins>
@@ -898,12 +892,7 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 410 1794 690 1860" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Βαρδάριον</ins>
-          </span>
-        </span>
-        <span id="w_174" class="ocr_word" title="bbox 706 1812 715 1821">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins title="nlp 2.00">Βαρδάριον· </ins>
           </span>
         </span>
         <span id="w_175" class="ocr_word" title="bbox 757 1813 886 1844" lang="grc">
@@ -928,12 +917,7 @@
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1529 1793 1825 1858" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀνομάζουσι</ins>
-          </span>
-        </span>
-        <span id="w_180" class="ocr_word" title="bbox 1842 1811 1852 1821">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins class="alt" title="nlp 2.00">ὀνομάζουσι· </ins>
           </span>
         </span>
       </span>
@@ -1136,9 +1120,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 97 2177 1907 2246">
-        <span id="w_220" class="ocr_word" title="bbox 97 2194 138 2226" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 97 2194 138 2226">
           <span class="alternatives">
-            <ins title="nlp 2.00">25 θάλασσαν.</ins>
+            <ins class="alt" title="nlp 2.00">25</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 97 2194 138 2226">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">θάλσσαν.</ins>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 511 2179 754 2244" lang="grc">
@@ -1480,19 +1469,19 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_287" class="ocr_word" title="bbox 1246 2723 1425 2787" lang="grc">
+        <span id="w_287_0" class="ocr_word" title="bbox 1246 2723 1425 2787">
           <span class="alternatives">
-            <ins title="nlp 2.00">μεταζὺ</ins>
+            <ins class="alt" title="nlp 2.00">μεταξὺ</ins>
+          </span>
+        </span>
+        <span id="w_287_1" class="ocr_word" title="bbox 1246 2723 1425 2787">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_288" class="ocr_word" title="bbox 1475 2725 1786 2790" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεασάμενος</ins>
-          </span>
-        </span>
-        <span id="w_289" class="ocr_word" title="bbox 1825 2722 1851 2773" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
       </span>
@@ -1537,9 +1526,9 @@
             <ins title="nlp 2.00">Βαρδάρον</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 1743 2832 1850 2879" lang="grc">
+        <span id="w_298_0" class="ocr_word" title="bbox 1743 2832 1850 2879">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὀνομάζουσιν</ins>
+            <ins class="alt" title="nlp 2.00">ὀνομάξουσιν</ins>
           </span>
         </span>
       </span>
