--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0059.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0059.html
@@ -126,9 +126,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 118 443 1861 514">
-        <span id="w_22" class="ocr_word" title="bbox 118 470 144 503">
+        <span id="w_22_0" class="ocr_word" title="bbox 118 470 144 503">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_22_1" class="ocr_word" title="bbox 118 470 144 503">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 170 449 224 498" lang="grc">
@@ -176,11 +181,6 @@
             <ins class="alt" title="nlp 1.00">τοὺ</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 1623 445 1861 514" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῥεύματος</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 169 525 1859 593">
         <span id="w_33" class="ocr_word" title="bbox 169 526 414 591" lang="grc">
@@ -210,16 +210,11 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1694 541 1859 593" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστρα-</ins>
+            <ins title="nlp 2.00">ἐστρατοπέδευσεν,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 167 601 1903 669">
-        <span id="w_39" class="ocr_word" title="bbox 167 603 487 667" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοπέδευσεν,</ins>
-          </span>
-        </span>
         <span id="w_40" class="ocr_word" title="bbox 528 622 586 652" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
@@ -982,14 +977,14 @@
             <ins class="alt" title="nlp 1.00">ἐπεφέρετο</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 1699 1865 1771 1906" lang="grc">
+        <span id="w_190_0" class="ocr_word" title="bbox 1699 1865 1771 1906">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἲς</ins>
+            <ins class="alt" title="nlp 2.00">εἴς</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1810 1865 1859 1896" lang="grc">
+        <span id="w_190_1" class="ocr_word" title="bbox 1699 1865 1771 1906">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
