--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0078.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0078.html
@@ -1160,9 +1160,9 @@
             <ins title="nlp 2.00">Ῥωμαῖοι</ins>
           </span>
         </span>
-        <span id="w_227" class="ocr_word" title="bbox 1945 2197 1982 2231">
+        <span id="w_227_0" class="ocr_word" title="bbox 1945 2197 1982 2231">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.</ins>
+            <ins class="alt" title="nlp 2.00">P.</ins>
           </span>
         </span>
       </span>
