--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0038.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0038.html
@@ -890,9 +890,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 123 1789 1877 1860">
-        <span id="w_172" class="ocr_word" title="bbox 123 1790 492 1855" lang="grc">
+        <span id="w_172_0" class="ocr_word" title="bbox 123 1790 492 1855">
           <span class="alternatives">
-            <ins title="nlp 2.00">θαυμάτων,</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
+          </span>
+        </span>
+        <span id="w_172_1" class="ocr_word" title="bbox 123 1790 492 1855">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">θαυμάτων,</ins>
           </span>
         </span>
         <span id="w_173" class="ocr_word" title="bbox 540 1789 665 1857" lang="grc">
