--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0064.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0064.html
@@ -161,19 +161,19 @@
             <ins class="alt" title="nlp 1.00">ἠβούλετο,</ins>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 1400 481 1489 520" lang="grc">
+        <span id="w_29_0" class="ocr_word" title="bbox 1400 481 1489 520">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔως</ins>
+            <ins class="alt" title="nlp 2.00">ἕως</ins>
+          </span>
+        </span>
+        <span id="w_29_1" class="ocr_word" title="bbox 1400 481 1489 520">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1517 465 1716 511" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖθεν</ins>
-          </span>
-        </span>
-        <span id="w_31" class="ocr_word" title="bbox 1740 479 1895 509" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτὸν</ins>
           </span>
         </span>
       </span>
@@ -393,7 +393,7 @@
         </span>
         <span id="w_74_1" class="ocr_word" title="bbox 1849 848 1944 900">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">c</ins>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -586,9 +586,14 @@
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 1697 1240 1888 1299" lang="grc">
+        <span id="w_113_0" class="ocr_word" title="bbox 1697 1240 1888 1299">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὀφθαλ-</ins>
+            <ins class="alt" title="nlp 2.00">ὀφθαλμοὺς</ins>
+          </span>
+        </span>
+        <span id="w_113_1" class="ocr_word" title="bbox 1697 1240 1888 1299">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1914 1256 1949 1288">
@@ -596,18 +601,8 @@
             <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1973 1256 1992 1290">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">2</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 202 1313 1894 1380">
-        <span id="w_116" class="ocr_word" title="bbox 202 1313 326 1379" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μοὺς</ins>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 374 1316 527 1364" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
@@ -796,9 +791,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 203 1617 1953 1690">
-        <span id="w_154" class="ocr_word" title="bbox 395 1620 637 1689" lang="grc">
+        <span id="w_154_0" class="ocr_word" title="bbox 395 1620 637 1689">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἡρακλές</ins>
+            <ins class="alt" title="nlp 2.00">Ἡρακλέα</ins>
+          </span>
+        </span>
+        <span id="w_154_1" class="ocr_word" title="bbox 395 1620 637 1689">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 684 1624 739 1673" lang="grc">
@@ -834,11 +834,6 @@
         <span id="w_161" class="ocr_word" title="bbox 1772 1623 1892 1688" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐμὸν</ins>
-          </span>
-        </span>
-        <span id="w_162" class="ocr_word" title="bbox 1918 1644 1953 1675">
-          <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
@@ -942,9 +937,14 @@
             <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_182" class="ocr_word" title="bbox 314 1857 561 1919" lang="grc">
+        <span id="w_182_0" class="ocr_word" title="bbox 314 1857 561 1919">
           <span class="alternatives">
-            <ins title="nlp 2.00">κομνηνῷ</ins>
+            <ins class="alt" title="nlp 2.00">Κομνηνῷ</ins>
+          </span>
+        </span>
+        <span id="w_182_1" class="ocr_word" title="bbox 314 1857 561 1919">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 604 1853 824 1919" lang="grc">
@@ -970,11 +970,6 @@
         <span id="w_187" class="ocr_word" title="bbox 1494 1854 1710 1919" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπέλαβε</ins>
-          </span>
-        </span>
-        <span id="w_188" class="ocr_word" title="bbox 1758 1856 1893 1922" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρὰ</ins>
           </span>
         </span>
       </span>
@@ -1152,9 +1147,14 @@
             <ins class="alt" title="nlp 1.00">νοσημάτων</ins>
           </span>
         </span>
-        <span id="w_223_0" class="ocr_word" title="bbox 839 2262 911 2305">
+        <span id="w_223_0_0" class="ocr_word" title="bbox 839 2262 911 2305">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀφ΄</ins>
+            <ins class="alt" title="nlp 2.00">ἀφ</ins>
+          </span>
+        </span>
+        <span id="w_223_0_1" class="ocr_word" title="bbox 839 2262 911 2305">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_223_1" class="ocr_word" title="bbox 839 2262 911 2305">
@@ -1170,11 +1170,6 @@
         <span id="w_225" class="ocr_word" title="bbox 1612 2263 1695 2292" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_226" class="ocr_word" title="bbox 1732 2243 1892 2293" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αἰτιώμεθα</ins>
           </span>
         </span>
       </span>
@@ -1434,9 +1429,9 @@
             <ins class="alt" title="nlp 1.00">νῦν</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 1913 2725 1952 2759">
+        <span id="w_278_0" class="ocr_word" title="bbox 1913 2725 1952 2759">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.</ins>
+            <ins class="alt" title="nlp 2.00">P.</ins>
           </span>
         </span>
       </span>
