--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0555.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0555.html
@@ -562,7 +562,7 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 1719 1201 1815 1232" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">πατὴρ</ins>
+            <ins title="nlp 2.00">πα-</ins>
           </span>
         </span>
       </span>
@@ -570,6 +570,11 @@
         <span id="w_107" class="ocr_word" title="bbox 41 1280 103 1312">
           <span class="alternatives">
             <ins title="nlp 2.00">358</ins>
+          </span>
+        </span>
+        <span id="w_108" class="ocr_word" title="bbox 129 1279 218 1325" lang="grc">
+          <span class="alternatives">
+            <ins title="nlp 2.00">τὴρ</ins>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 258 1258 369 1324" lang="grc">
@@ -693,7 +698,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1661 1412 1709 1463" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ᾿</ins>
+            <ins title="nlp 2.00">δ’</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 1751 1434 1816 1464" lang="grc">
@@ -755,7 +760,7 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1691 1489 1814 1540" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀποστολικώτατον.</ins>
+            <ins title="nlp 2.00">ἀπο-</ins>
           </span>
         </span>
       </span>
@@ -763,6 +768,11 @@
         <span id="w_147" class="ocr_word" title="bbox 39 1591 101 1624">
           <span class="alternatives">
             <ins title="nlp 2.00">453</ins>
+          </span>
+        </span>
+        <span id="w_148" class="ocr_word" title="bbox 125 1568 495 1619" lang="grc">
+          <span class="alternatives">
+            <ins title="nlp 2.00">στολικώτατον.</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 560 1570 609 1618" lang="grc">
@@ -970,7 +980,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 572 1881 867 1930" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐσπουδάκει,</ins>
+            <ins title="nlp 2.00">ἐσπουδάκει,</ins>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 945 1878 1012 1940" lang="grc">
@@ -1178,7 +1188,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1668 2201 1810 2251" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρα-</ins>
+            <ins title="nlp 2.00">στρατηγικῆς</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1835 2208 1875 2239">
@@ -1191,11 +1201,6 @@
         <span id="w_231" class="ocr_word" title="bbox 73 2292 103 2322">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_232" class="ocr_word" title="bbox 127 2289 328 2335" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τηγικῇς</ins>
           </span>
         </span>
         <span id="w_233" class="ocr_word" title="bbox 366 2266 729 2334" lang="grc">
@@ -1289,7 +1294,7 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1150 2420 1544 2486" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">προσάπτουσιν·</ins>
+            <ins title="nlp 2.00">προσάπτουσιν ·</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1601 2436 1703 2482" lang="grc">
@@ -1353,7 +1358,7 @@
         </span>
         <span id="w_264" class="ocr_word" title="bbox 365 2601 395 2644" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἢ</ins>
+            <ins title="nlp 2.00">ἥ</ins>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 437 2600 479 2629" lang="grc">
@@ -1368,7 +1373,7 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 639 2578 966 2642" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">φιλονεικείη,</ins>
+            <ins title="nlp 2.00">φιλονεικείη ,</ins>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1014 2589 1133 2624" lang="grc">
@@ -1472,7 +1477,7 @@
         </span>
         <span id="w_287" class="ocr_word" title="bbox 893 2787 932 2839" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ε</ins>
+            <ins title="nlp 2.00">(ε </ins>
           </span>
         </span>
         <span id="w_288" class="ocr_word" title="bbox 961 2784 1010 2826">
@@ -1534,22 +1539,32 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 624 2839 668 2887" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δ’</ins>
+            <ins title="nlp 2.00">δ’ αὖ τόδ’</ins>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 697 2861 758 2886" lang="grc">
+        <span id="w_300_0" class="ocr_word" title="bbox 697 2861 758 2886">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὖ τόδ᾿ r: δ᾿αὺτὸ δ᾿ C</ins>
+            <ins class="alt" title="nlp 2.00">r:</ins>
+          </span>
+        </span>
+        <span id="w_300_1" class="ocr_word" title="bbox 697 2861 758 2886">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">δ’</ins>
           </span>
         </span>
         <span id="w_301" class="ocr_word" title="bbox 1345 2844 1399 2882">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
+            <ins title="nlp 2.00">αὺτὸ δ’ C</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1428 2835 1557 2892">
+        <span id="w_302_0" class="ocr_word" title="bbox 1428 2835 1557 2892">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρά</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
+          </span>
+        </span>
+        <span id="w_302_1" class="ocr_word" title="bbox 1428 2835 1557 2892">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">παρὰ</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1579 2850 1621 2878">
@@ -1621,7 +1636,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1330 2898 1403 2952" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">με</ins>
+            <ins title="nlp 2.00">(με</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1433 2894 1480 2936">
