--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0083.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0083.html
@@ -27,7 +27,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 1721 181 1791 234" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">́3</ins>
+            <ins title="nlp 2.00">53</ins>
           </span>
         </span>
       </span>
@@ -788,7 +788,7 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 105 1631 182 1685" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
+            <ins title="nlp 2.00">(αἱ</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 214 1648 304 1693" lang="grc">
