--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0060.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0060.html
@@ -262,29 +262,29 @@
             <ins class="alt" title="nlp 1.00">παράπαν</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1127 719 1158 763" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 1127 719 1158 763">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἤ</ins>
+            <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 1198 698 1491 764" lang="grc">
+        <span id="w_49_1" class="ocr_word" title="bbox 1127 719 1158 763">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρατηγός ,</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_50_0" class="ocr_word" title="bbox 1198 698 1491 764">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">στρατηγός,</ins>
+          </span>
+        </span>
+        <span id="w_50_1" class="ocr_word" title="bbox 1198 698 1491 764">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1544 700 1587 748" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
-          </span>
-        </span>
-        <span id="w_52" class="ocr_word" title="bbox 1632 719 1698 763" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μή</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 1746 697 1845 747" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πού</ins>
           </span>
         </span>
       </span>
@@ -373,7 +373,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1787 857 1844 914">
           <span class="alternatives">
-            <ins title="nlp 2.00">;”</ins>
+            <ins title="nlp 2.00">”</ins>
           </span>
         </span>
       </span>
@@ -781,12 +781,7 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 826 1553 1001 1617" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κλίνην</ins>
-          </span>
-        </span>
-        <span id="w_152" class="ocr_word" title="bbox 1012 1591 1026 1617">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">κλίνην, </ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1066 1574 1132 1617" lang="grc">
@@ -819,9 +814,9 @@
             <ins class="alt" title="nlp 1.00">τινι</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1870 1566 1897 1599">
+        <span id="w_159_0" class="ocr_word" title="bbox 1870 1566 1897 1599">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
@@ -885,12 +880,7 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 823 1706 1050 1773" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνέβλεπε</ins>
-          </span>
-        </span>
-        <span id="w_172" class="ocr_word" title="bbox 1067 1724 1077 1735">
-          <span class="alternatives">
-            <ins title="nlp 2.00"> · </ins>
+            <ins class="alt" title="nlp 2.00">ἐνέβλεπε· </ins>
           </span>
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1117 1726 1201 1757" lang="grc">
@@ -1417,12 +1407,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 948 2561 1245 2626" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἠπατήμεθα</ins>
-          </span>
-        </span>
-        <span id="w_277" class="ocr_word" title="bbox 1261 2577 1270 2587">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins class="alt" title="nlp 2.00">ἠπατήμεθα· </ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1312 2557 1337 2610" lang="grc">
@@ -1469,12 +1454,7 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 871 2633 1003 2688" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
-          </span>
-        </span>
-        <span id="w_287" class="ocr_word" title="bbox 1021 2677 1034 2704">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">αὐτῷ,</ins>
           </span>
         </span>
         <span id="w_288" class="ocr_word" title="bbox 1076 2638 1158 2687" lang="grc">
