--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0065.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0065.html
@@ -309,9 +309,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_60_0" class="ocr_word" title="bbox 541 750 611 802">
+        <span id="w_60_0_0" class="ocr_word" title="bbox 541 750 611 802">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἀπ'</ins>
+            <ins class="alt" title="nlp 2.00">ἀπ᾿</ins>
+          </span>
+        </span>
+        <span id="w_60_0_1" class="ocr_word" title="bbox 541 750 611 802">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_60_1" class="ocr_word" title="bbox 541 750 611 802">
@@ -324,24 +329,19 @@
             <ins class="alt" title="nlp 1.00">πολέμων</ins>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 1172 755 1294 820" lang="grc">
+        <span id="w_62_0" class="ocr_word" title="bbox 1172 755 1294 820">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τοῖς</ins>
+            <ins class="alt" title="nlp 2.00">[τοῖς</ins>
+          </span>
+        </span>
+        <span id="w_62_1" class="ocr_word" title="bbox 1172 755 1294 820">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1330 774 1454 816" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
-          </span>
-        </span>
-        <span id="w_64" class="ocr_word" title="bbox 1480 757 1629 821" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμᾶς]</ins>
-          </span>
-        </span>
-        <span id="w_65" class="ocr_word" title="bbox 1669 756 1818 820" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κῆδος</ins>
           </span>
         </span>
       </span>
@@ -534,9 +534,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 121 1141 1817 1211">
-        <span id="w_104" class="ocr_word" title="bbox 257 1142 363 1210" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 257 1142 363 1210">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 257 1142 363 1210">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 401 1164 494 1210" lang="grc">
@@ -572,11 +577,6 @@
         <span id="w_111" class="ocr_word" title="bbox 1413 1143 1697 1211" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταρρεῖ),</ins>
-          </span>
-        </span>
-        <span id="w_112" class="ocr_word" title="bbox 1737 1162 1817 1193" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">νεμεσάτω</ins>
           </span>
         </span>
       </span>
@@ -754,9 +754,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 67 1528 1819 1599">
-        <span id="w_149" class="ocr_word" title="bbox 67 1553 94 1587">
+        <span id="w_149_0" class="ocr_word" title="bbox 67 1553 94 1587">
           <span class="alternatives">
-            <ins title="nlp 2.00">c</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_149_1" class="ocr_word" title="bbox 67 1553 94 1587">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 120 1551 204 1582" lang="grc">
@@ -782,11 +787,6 @@
         <span id="w_154" class="ocr_word" title="bbox 1075 1536 1486 1595" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κωνσταντῖνον,</ins>
-          </span>
-        </span>
-        <span id="w_155" class="ocr_word" title="bbox 1535 1528 1819 1581" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κἀντεῦθεν</ins>
           </span>
         </span>
       </span>
@@ -1172,9 +1172,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 63 2228 1816 2297">
-        <span id="w_230" class="ocr_word" title="bbox 63 2250 97 2284">
+        <span id="w_230_0" class="ocr_word" title="bbox 63 2250 97 2284">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">D</ins>
+          </span>
+        </span>
+        <span id="w_230_1" class="ocr_word" title="bbox 63 2250 97 2284">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 120 2231 342 2297" lang="grc">
@@ -1215,11 +1220,6 @@
         <span id="w_238" class="ocr_word" title="bbox 1253 2229 1511 2294" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Ῥωμαίων</ins>
-          </span>
-        </span>
-        <span id="w_239" class="ocr_word" title="bbox 1548 2228 1816 2295" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐθρέψατο.</ins>
           </span>
         </span>
       </span>
@@ -1593,9 +1593,9 @@
             <ins class="alt" title="nlp 1.00">ἐκεῖνος</ins>
           </span>
         </span>
-        <span id="w_314" class="ocr_word" title="bbox 769 2865 1049 2921" lang="grc">
+        <span id="w_314_0" class="ocr_word" title="bbox 769 2865 1049 2921">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἑθρέψατο?</ins>
+            <ins class="alt" title="nlp 2.00">ἐθρέψατο?</ins>
           </span>
         </span>
       </span>
