--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0080.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0080.html
@@ -259,7 +259,7 @@
         </span>
         <span id="w_47" class="ocr_word" title="bbox 612 693 756 754" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅλως</ins>
+            <ins title="nlp 2.00">(ὁλως</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 783 713 875 759" lang="grc">
@@ -878,16 +878,21 @@
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 1712 1721 1925 1768" lang="grc">
+        <span id="w_168_0" class="ocr_word" title="bbox 1712 1721 1925 1768">
           <span class="alternatives">
-            <ins title="nlp 2.00">πεπραγμενα.</ins>
+            <ins class="alt" title="nlp 2.00">πεπραγ-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 169 1798 371 1844">
-        <span id="w_169" class="ocr_word" title="bbox 169 1798 211 1830">
+        <span id="w_169_0" class="ocr_word" title="bbox 169 1798 211 1830">
           <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
+          </span>
+        </span>
+        <span id="w_169_1" class="ocr_word" title="bbox 169 1798 211 1830">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μενα.</ins>
           </span>
         </span>
       </span>
@@ -993,7 +998,7 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 903 2010 1007 2070" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 1053 2010 1146 2077" lang="grc">
