--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0084.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0084.html
@@ -1084,7 +1084,7 @@
         </span>
         <span id="w_209" class="ocr_word" title="bbox 882 2258 1135 2325" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'Ῥωμαίων</ins>
+            <ins title="nlp 2.00">Ῥωμαίων</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1171 2262 1434 2326" lang="grc">
@@ -1406,9 +1406,14 @@
             <ins title="nlp 2.00">ἄλλὰ</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 963 2856 987 2882" lang="grc">
+        <span id="w_273_0" class="ocr_word" title="bbox 963 2856 987 2882">
           <span class="alternatives">
-            <ins title="nlp 2.00">α τ</ins>
+            <ins class="alt" title="nlp 2.00">τ</ins>
+          </span>
+        </span>
+        <span id="w_273_1" class="ocr_word" title="bbox 963 2856 987 2882">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">α</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1024 2836 1058 2879">
