--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0557.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0557.html
@@ -277,7 +277,7 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 720 771 1070 832" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">νυχθημέροις,</ins>
+            <ins title="nlp 2.00">νυχθημέροις ,</ins>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1116 787 1219 819" lang="grc">
@@ -339,7 +339,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1626 853 1823 902" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Δανούβεως</ins>
+            <ins title="nlp 2.00">ΔανούΒεως</ins>
           </span>
         </span>
       </span>
@@ -576,7 +576,7 @@
         </span>
         <span id="w_109" class="ocr_word" title="bbox 249 1312 572 1374" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μανιχαϊκῆς</ins>
+            <ins title="nlp 2.00">ΜανιχαΪκῆς</ins>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 611 1310 842 1374" lang="grc">
@@ -700,7 +700,7 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 1742 1468 1824 1516" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">λόγων.</ins>
+            <ins title="nlp 2.00">λό-</ins>
           </span>
         </span>
       </span>
@@ -708,6 +708,11 @@
         <span id="w_134" class="ocr_word" title="bbox 49 1555 112 1593">
           <span class="alternatives">
             <ins title="nlp 2.00">455</ins>
+          </span>
+        </span>
+        <span id="w_135" class="ocr_word" title="bbox 135 1560 250 1606" lang="grc">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 1.00">γῶν.</ins>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 326 1541 644 1606" lang="grc">
@@ -774,7 +779,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1379 1621 1546 1684" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἴχετο.</ins>
+            <ins title="nlp 2.00">ἔχετο.</ins>
           </span>
         </span>
         <span id="w_149" class="ocr_word" title="bbox 1611 1640 1696 1669" lang="grc">
@@ -858,7 +863,7 @@
         </span>
         <span id="w_165" class="ocr_word" title="bbox 991 1779 1309 1840" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μανιχαϊκῆς</ins>
+            <ins title="nlp 2.00">ΜανιχαΪκῆς</ins>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 1356 1773 1586 1841" lang="grc">
@@ -972,7 +977,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1560 1929 1822 1992" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀδαμαντίνους,</ins>
+            <ins title="nlp 2.00">ἀδαμανρτίνους,</ins>
           </span>
         </span>
       </span>
@@ -1130,7 +1135,7 @@
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1026 2242 1259 2302" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">διπλοῦν,</ins>
+            <ins title="nlp 2.00">διπλοῦν ,</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1315 2257 1398 2287" lang="grc">
@@ -1449,7 +1454,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1481 2807 1818 2863" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> ὑπεραγωνιξομένου</ins>
+            <ins title="nlp 2.00">ὑπεραγωνιζομένου</ins>
           </span>
         </span>
       </span>
@@ -1481,7 +1486,7 @@
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1253 2884 1287 2909" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὦ</ins>
+            <ins title="nlp 2.00">ω</ins>
           </span>
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1320 2864 1352 2909">
