--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0111.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0111.html
@@ -142,14 +142,9 @@
             <ins class="alt" title="nlp 1.00">ὑμῖν</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 841 477 1216 542" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσῳκείωμαι</ins>
-          </span>
-        </span>
         <span id="w_26" class="ocr_word" title="bbox 1228 517 1239 539">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">προσῳκείωμαι,</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1289 486 1351 542" lang="grc">
@@ -362,16 +357,11 @@
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1622 808 1766 853" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετα-</ins>
+            <ins title="nlp 2.00">μεταφερώμεθα,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 74 861 1744 929">
-        <span id="w_68" class="ocr_word" title="bbox 74 863 367 929" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φερώμεθα,</ins>
-          </span>
-        </span>
         <span id="w_69" class="ocr_word" title="bbox 425 861 545 912" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
@@ -753,14 +743,9 @@
             <ins class="alt" title="nlp 1.00">ἡμῖν</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1140 1483 1518 1553" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπομεμέρισται</ins>
-          </span>
-        </span>
         <span id="w_145" class="ocr_word" title="bbox 1534 1524 1548 1551">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">ἀπομεμέρισται,</ins>
           </span>
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1589 1508 1680 1553" lang="grc">
@@ -847,9 +832,14 @@
             <ins class="alt" title="nlp 1.00">διεξάγοιτο</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 1176 1661 1242 1690" lang="grc">
+        <span id="w_161_0" class="ocr_word" title="bbox 1176 1661 1242 1690">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_161_1" class="ocr_word" title="bbox 1176 1661 1242 1690">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1267 1641 1324 1689" lang="grc">
@@ -860,11 +850,6 @@
         <span id="w_163" class="ocr_word" title="bbox 1349 1660 1435 1706" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 1461 1642 1766 1706" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βασιλείας.’’</ins>
           </span>
         </span>
       </span>
